--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,7 +54,7 @@ color: #EAF6F6;
 }
 
 .top-container {
-    background-color: #84d3d3);
+    background-color: #93dfdf);
     position: relative;
     padding-top: 100px;
 
